gcc/testsuite/gm2/iso/fail/badreturn2.mod
MODULE badreturn2 ;


PROCEDURE foo ;
BEGIN
   RETURN 0
END foo ;


BEGIN
   foo
END badreturn2.
